@@ -1401,3 +1401,4 @@ Added buttons to the Scheduled Backups page to enable or disable backups, and a 
 ---- Changes since 4.00 ----
 Updated the ZenPhoto script installer to version 1.4.4.5, Joomla to 3.1.1 and 2.5.11, MediaWiki to 1.20.5 and 1.19.6, phpMyAdmin to 4.0.0, and PHPList to 2.11.9.
 German translation updates, thanks to Raymond Vetter.
+The default external IP address (for use in DNS records) can now be specified on a per-reseller basis.
